Fixed Tab Content Dropdown Cutoff

--- a/reactapp/components/modals/DataViewer/DataViewer.css
+++ b/reactapp/components/modals/DataViewer/DataViewer.css
@@ -3,3 +3,9 @@
   overflow: auto;
   height: 100%;
 }
+
+.tab-pane {
+  height: 100%;
+  overflow: auto;
+  padding: 1rem;
+}
